--- a/README
+++ b/README
@@ -55,5 +55,14 @@ given parameters through the pert attribute of HOD:
 
 HISTORY
 ---------------------------------------------------------------------------------------
+0.6.0 - October 4, 2013
+		Added halo exclusion options (Most Buggy)
+		Added scale-dependent bias
+		Added lower mvir bound on 1h term
+		Fixed nonlinear P(k)
+		
+0.5.1 - October 2, 2013
+		Added nonlinear P(k) option
+		
 0.5.0 - October 2, 2013
 		First working version
