--- a/docs/examples/getting_started.ipynb
+++ b/docs/examples/getting_started.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Getting Started with `halomod`"
    ]
@@ -1000,9 +998,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:halomod]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-halomod-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1014,9 +1012,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
