--- a/docs/examples/extension.ipynb
+++ b/docs/examples/extension.ipynb
@@ -161,89 +161,27 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:37: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "<>:39: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "<>:37: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "<>:39: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "<ipython-input-4-103795f79a21>:37: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "  elif norm is \"m\":\n",
-      "<ipython-input-4-103795f79a21>:39: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
-      "  elif norm is \"rho\":\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "class PowerlawInf_largecutoff(Profile):\n",
+    "class PowerlawInf_largecutoff(ProfileInf):\n",
     "    \"\"\"\n",
-    "    A simple power law assuming f(x)=1/x**b * exp[-ax**eta]\n",
+    "    A simple power law with exponential cut-off, \n",
+    "    assuming f(x)=1/x**b * exp[-ax].\n",
     "    \"\"\"\n",
-    "    _defaults = {\"a\": 0.049, \"b\": 2.248, \"eta\":1.0}\n",
+    "    _defaults = {\"a\": 0.049, \"b\": 2.248}\n",
     "    def _f(self, x):\n",
-    "        return 1. / (x**self.params['b']) * np.exp(-self.params['a']*x**self.params['eta'])\n",
+    "        return 1. / (x**self.params['b']) * np.exp(-self.params['a']*x)\n",
     "\n",
     "    def _h(self,c=None):\n",
-    "        return gamma((3-self.params['b'])/self.params['eta']) * self.params['a']**((self.params['b']-3)/self.params['eta'])/self.params['eta']\n",
+    "        return gamma(3-self.params['b']) * self.params['a']**(self.params['b']-3)\n",
     "\n",
     "    def _p(self, K, c=None):\n",
     "        b = self.params['b']\n",
     "        a = self.params['a']\n",
-    "        eta = self.params['eta']\n",
     "        if b==2:\n",
     "            return np.arctan(K/a)/K\n",
     "        else:\n",
-    "            return -1 / K * ((a**2+K**2)**(b/2-1)*gamma(2-b)*np.sin((b-2)*np.arctan(K/a)))\n",
-    "        \n",
-    "    def _rho_s(self, c, r_s=None, norm=None):\n",
-    "        \"\"\"\n",
-    "        The amplitude factor of the halo_profile\n",
-    "        Parameters\n",
-    "        ----------\n",
-    "        c : float or array of floats\n",
-    "            The halo_concentration parameter\n",
-    "        norm : str or None, {None,\"m\",\"rho\"}\n",
-    "            Normalisation for the amplitude. Can either be None (in which case\n",
-    "            the output is a density), \"m\" (in which case the output is inverse\n",
-    "            volume) or \"rho\" in which case the output is dimensionless.\n",
-    "        r_s : float or array of floats\n",
-    "            The scale radius. This is only required if ``norm`` is \"m\".\n",
-    "        \"\"\"\n",
-    "        if norm is None:\n",
-    "            rho = c ** 3 * self.delta_halo * self.mean_dens / (3 * self._h(c))\n",
-    "        elif norm is \"m\":\n",
-    "            rho = 1.0 / (4 * np.pi * r_s ** 3 * self._h(c))\n",
-    "        elif norm is \"rho\":\n",
-    "            rho = c ** 3 * self.delta_halo / (3 * self._h(c))\n",
-    "\n",
-    "        return self._reduce(rho)\n",
-    "\n",
-    "    def rho(self, r, m, norm=None, c=None, coord=\"r\"):\n",
-    "        \"\"\"\n",
-    "        The density at radius r of a halo of mass m.\n",
-    "        Parameters\n",
-    "        ----------\n",
-    "        r : float or array of floats\n",
-    "            The radial location(s). The units vary according to :attr:`coord`\n",
-    "        m : float or array of floats\n",
-    "            The mass(es) of the halo(s)\n",
-    "        norm : str, {``None``,``m``,``rho``}\n",
-    "            Normalisation of the density.\n",
-    "        c : float or array of floats, default ``None``\n",
-    "            Concentration(s) of the halo(s). Must be same length as :attr:`m`.\n",
-    "        coord : str, {``r``,``x``,``s``}\n",
-    "            What the radial coordinate represents. ``r`` represents physical\n",
-    "            co-ordinates [units Mpc/h]. ``x`` is in units of the scale radius\n",
-    "            (x(r_vir) = c), and ``s`` is in units of the virial radius (s(r_vir) = 1).\n",
-    "        \"\"\"\n",
-    "        c, r_s, x = self._get_r_variables(r, m, c, coord)\n",
-    "        rho = self._f(x) * self._rho_s(c, r_s, norm)\n",
-    "        #rho[x > c] = 0.0\n",
-    "\n",
-    "        return self._reduce(rho)\n"
+    "            return -1 / K * ((a**2+K**2)**(b/2-1)*gamma(2-b)*np.sin((b-2)*np.arctan(K/a)))"
    ]
   },
   {
@@ -362,8 +300,8 @@
    "source": [
     "class Maccio07(CMRelation):\n",
     "    \"\"\"\n",
-    "        HI concentration-mass relation based on Maccio et al.(2007). Default value taken from 1611.06235\n",
-    "        \"\"\"\n",
+    "    HI concentration-mass relation based on Maccio et al.(2007). Default value taken from 1611.06235\n",
+    "    \"\"\"\n",
     "    _defaults = {'c_0': 28.65, \"gamma\": 1.45}\n",
     "    native_mdefs = (SOMean(),)\n",
     "\n",
