--- a/docs/examples/extension.ipynb
+++ b/docs/examples/extension.ipynb
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that all the infrastructure has been set up by `Profile` or `ProfileInf` class, depending on if you truncate the halos or not. And all you need to modify is the `_f` function, its integration `_h` and its Fourier transform `_p` (see documentation for `profiles.py`)"
+    "Notice that all the infrastructure has been set up by `Profile` or `ProfileInf` class, depending on if you truncate the halos or not. And all you need to modify is the `_f` function, and optionally its integration `_h` and its Fourier transform `_p` (see documentation for [`profiles.py`](https://halomod.readthedocs.io/en/docs/_autosummary/halomod.profiles.html#module-halomod.profiles))"
    ]
   },
   {
@@ -163,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class PowerlawInf_largecutoff(ProfileInf):\n",
+    "class PowerLawWithExpCut(ProfileInf):\n",
     "    \"\"\"\n",
     "    A simple power law with exponential cut-off, \n",
     "    assuming f(x)=1/x**b * exp[-ax].\n",
@@ -181,16 +181,14 @@
     "        if b==2:\n",
     "            return np.arctan(K/a)/K\n",
     "        else:\n",
-    "            return -1 / K * ((a**2+K**2)**(b/2-1)*gamma(2-b)*np.sin((b-2)*np.arctan(K/a)))\n",
-    "\n",
-    "\n"
+    "            return -1 / K * ((a**2+K**2)**(b/2-1)*gamma(2-b)*np.sin((b-2)*np.arctan(K/a)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At bare minimum, you should specify `_f` which is just the density profile itself, and all the integration and Fourier transformation will be done numerically. However, that is very inefficient so you should always find analytical expression and specify if you can."
+    "At bare minimum, you must specify `_f` which is just the density profile itself, and all the integration and Fourier transformation will be done numerically. However, that is very inefficient so you should always find analytical expression and specify if you can."
    ]
   },
   {
@@ -206,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hm = TracerHaloModel(tracer_profile_model=PowerlawInf_largecutoff)"
+    "hm = TracerHaloModel(tracer_profile_model=PowerLawWithExpCut)"
    ]
   },
   {
@@ -302,8 +300,9 @@
    "source": [
     "class Maccio07(CMRelation):\n",
     "    \"\"\"\n",
-    "        HI concentration-mass relation based on Maccio et al.(2007). Default value taken from 1611.06235\n",
-    "        \"\"\"\n",
+    "    HI concentration-mass relation based on Maccio et al.(2007). \n",
+    "    Default value taken from 1611.06235.\n",
+    "    \"\"\"\n",
     "    _defaults = {'c_0': 28.65, \"gamma\": 1.45}\n",
     "    native_mdefs = (SOMean(),)\n",
     "\n",
@@ -380,7 +379,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hm.tracer_concentration_params=dict({'c_0': 28.65, \"gamma\": 1.45})"
+    "hm.tracer_concentration_params={'c_0': 28.65, \"gamma\": 1.45}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See the documentation for [`concentration.py`](https://halomod.readthedocs.io/en/docs/_autosummary/halomod.concentration.html) for more."
    ]
   },
   {
@@ -425,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For HOD, it's a bit more complicated. First, one need to decide what type of tracer it is. The most generic class to use is `HOD`, however, you may prefer `HODBulk` where the tracer is considered to be continueous distributed ; or `HODPoisson`, which assumes Poisson distributed discrete satellite components, which is commonly used for galaxies.\n",
+    "For HOD, it's a bit more complicated. First, one need to decide what type of tracer it is. The most generic class to use is `HOD`, however, you may prefer `HODBulk` where the tracer is considered to be continuously distributed ; or `HODPoisson`, which assumes Poisson distributed discrete satellite components, which is commonly used for galaxies.\n",
     "\n",
     "Second, if your model has a minimum halo mass to host any tracer as a sharp cut-off (or not), you need specify \n",
     "\n",
@@ -433,13 +439,15 @@
     "sharp_cut = True # or False\n",
     "```\n",
     "\n",
-    "If your model has a seperation of central and satellite components, you need to specify if the satellite occupation is inherently dependant on the central occupation:\n",
+    "If your model has a seperation of central and satellite components, you need to specify if the satellite occupation is inherently dependant on the existence of central galaxies:\n",
     "\n",
     "```python\n",
     "central_condition_inherent = False # or True\n",
     "```\n",
     "\n",
-    "If True, the actual satellite component will be your satellite occupation times central occupation."
+    "If False, the actual satellite component will be your satellite occupation times occupation for central galaxies.\n",
+    "\n",
+    "See the documentation for [`hod.py`](https://halomod.readthedocs.io/en/docs/_autosummary/halomod.hod.html) for more."
    ]
   },
   {
@@ -507,10 +515,9 @@
     "                 \"eta\": 1.0\n",
     "                 }\n",
     "    sharp_cut = False\n",
-    "    central_condition_inherent = True\n",
+    "    central_condition_inherent = False\n",
     "\n",
     "    def _central_occupation(self, m):\n",
-    "\n",
     "        alpha = self.params['alpha']\n",
     "        beta = self.params['beta']\n",
     "        m_1 = 10 ** self.params['M_1']\n",
@@ -518,7 +525,9 @@
     "        a2 = self.params['a2']\n",
     "        m_break = 10 ** self.params['M_break']\n",
     "\n",
-    "        out = m * (a1 * (m / 1e10) ** beta * np.exp(-(m / m_break) ** alpha) + a2) * np.exp(-(m_1 / m) ** 0.5)\n",
+    "        out = m * (a1 * (m / 1e10) ** beta \n",
+    "                   * np.exp(-(m / m_break) ** alpha) \n",
+    "                   + a2) * np.exp(-(m_1 / m) ** 0.5)\n",
     "        return out\n",
     "\n",
     "    def _satellite_occupation(self, m):\n",
@@ -528,7 +537,6 @@
     "        m1 = 10 ** self.params['M_break_sat']\n",
     "        array = np.zeros_like(m)\n",
     "        array[m >= 10 ** 11] = 1\n",
-    "\n",
     "        return amp * (m/m1) ** beta * np.exp(-(m1/m)**alpha) * array\n",
     "        #return 10**8\n",
     "\n",
@@ -536,24 +544,26 @@
     "        \"A factor (potentially with astropy units) to convert the total occupation to a desired unit.\"\n",
     "        A12=2.869e-15\n",
     "        nu21cm=1.42e9\n",
-    "        Const=( 3.0*A12*const.h*const.c**3.0 )/( 32.0*np.pi*(const.m_p+const.m_e)*const.Boltzmann * nu21cm**2);\n",
-    "        Mpcoverh_3=((astroconst.kpc.value*1e3)/(cosmo.H0.value/100.0) )**3\n",
+    "        Const=(3.0*A12*const.h*const.c**3.0 )/(32.0*np.pi*(const.m_p+const.m_e)\n",
+    "                                               *const.Boltzmann * nu21cm**2);\n",
+    "        Mpcoverh_3=((astroconst.kpc.value*1e3)/(cosmo.H0.value/100.0))**3\n",
     "        hubble = cosmo.H0.value * cosmo.efunc(z)*1.0e3/(astroconst.kpc.value*1e3)\n",
-    "        temp_conv=Const * ((1.0+z)**2/hubble)\n",
+    "        temp_conv=Const*((1.0+z)**2/hubble)\n",
     "        # convert to Mpc^3, solar mass\n",
     "        temp_conv=temp_conv/Mpcoverh_3 * astroconst.M_sun.value\n",
     "        return temp_conv\n",
     "\n",
-    "    def cn(self, M):\n",
+    "    def nc(self, M):\n",
     "        n_c = np.zeros_like(M)\n",
-    "        n_c[np.logical_and(M >= 10 ** self.params[\"M_min_counts\"], M <= 10 ** self.params[\"M_max_counts\"])] = 1\n",
+    "        n_c[np.logical_and(M >= 10 ** self.params[\"M_min_counts\"], \n",
+    "                           M <= 10 ** self.params[\"M_max_counts\"])] = 1\n",
     "        return n_c\n",
     "\n",
-    "    def sn(self, M):\n",
+    "    def ns(self, M):\n",
     "        n_s = np.zeros_like(M)\n",
-    "        index = np.logical_and(M >= 10 ** self.params[\"M_min_counts\"], M <= 10 ** self.params[\"M_max_counts\"])\n",
+    "        index = np.logical_and(M >= 10 ** self.params[\"M_min_counts\"], \n",
+    "                               M <= 10 ** self.params[\"M_max_counts\"])\n",
     "        n_s[index] = (M[index] / 10 ** self.params[\"M_1_counts\"]) ** self.params[\"alpha_counts\"]\n",
-    "\n",
     "        return n_s"
    ]
   },
@@ -572,7 +582,7 @@
    "source": [
     "hm=TracerHaloModel(hod_model=Spinelli19,\n",
     "                  tracer_concentration_model=Maccio07,\n",
-    "                  tracer_profile_model=PowerlawInf_largecutoff\n",
+    "                  tracer_profile_model=PowerLawWithExpCut\n",
     "                  )"
    ]
   },
@@ -643,7 +653,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hm.update(hod_params=dict({\"beta\": 1.0}))"
+    "hm.update(hod_params={\"beta\": 1.0})"
    ]
   },
   {
