--- a/docs/examples/extension.ipynb
+++ b/docs/examples/extension.ipynb
@@ -331,7 +331,7 @@
    "outputs": [],
    "source": [
     "hm = TracerHaloModel(tracer_concentration_model=Maccio07,\n",
-    "                    tracer_concentration_params=dict({'c_0': 28.65, \"gamma\": 1.45}))"
+    "                    tracer_concentration_params={'c_0': 28.65, \"gamma\": 1.45})"
    ]
   },
   {
@@ -479,7 +479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And in our case for utility, we also specify the number of galaxies in this model, which is defined by `cn` and `sn`:"
+    "And in our case for utility, we also specify the number of galaxies in this model, which is defined by `nc` and `ns`:"
    ]
   },
   {
