--- a/docs/examples/extension.ipynb
+++ b/docs/examples/extension.ipynb
@@ -479,7 +479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And in our case for utility, we also specify the number of galaxies in this model, which is defined by `cn` and `sn`:"
+    "And in our case for utility, we also specify the number of galaxies in this model, which is defined by `_tracer_per_central` and `sn`:"
    ]
   },
   {
@@ -553,17 +553,28 @@
     "        temp_conv=temp_conv/Mpcoverh_3 * astroconst.M_sun.value\n",
     "        return temp_conv\n",
     "\n",
-    "    def nc(self, M):\n",
+    "    def _tracer_per_central(self, M):\n",
+    "        \"\"\"Number of tracer per central tracer source\"\"\"\n",
     "        n_c = np.zeros_like(M)\n",
-    "        n_c[np.logical_and(M >= 10 ** self.params[\"M_min_counts\"], \n",
-    "                           M <= 10 ** self.params[\"M_max_counts\"])] = 1\n",
+    "        n_c[\n",
+    "            np.logical_and(\n",
+    "                M >= 10 ** self.params[\"M_min_counts\"],\n",
+    "                M <= 10 ** self.params[\"M_max_counts\"],\n",
+    "            )\n",
+    "        ] = 1\n",
     "        return n_c\n",
     "\n",
-    "    def ns(self, M):\n",
+    "    def _tracer_per_satellite(self, M):\n",
+    "        \"\"\"Number of tracer per satellite tracer source\"\"\"\n",
     "        n_s = np.zeros_like(M)\n",
-    "        index = np.logical_and(M >= 10 ** self.params[\"M_min_counts\"], \n",
-    "                               M <= 10 ** self.params[\"M_max_counts\"])\n",
-    "        n_s[index] = (M[index] / 10 ** self.params[\"M_1_counts\"]) ** self.params[\"alpha_counts\"]\n",
+    "        index = np.logical_and(\n",
+    "            M >= 10 ** self.params[\"M_min_counts\"],\n",
+    "            M <= 10 ** self.params[\"M_max_counts\"],\n",
+    "        )\n",
+    "        n_s[index] = (M[index] / 10 ** self.params[\"M_1_counts\"]) ** self.params[\n",
+    "            \"alpha_counts\"\n",
+    "        ]\n",
+    "\n",
     "        return n_s"
    ]
   },
