fix: angular_corr_gal was buggy if using p_of_z

--- a/devel/using_angular_corr.ipynb
+++ b/devel/using_angular_corr.ipynb
@@ -213,7 +213,7 @@
     }
    ],
    "source": [
-    "wtheta = wtheta = angular_corr_gal(theta,xi_power_law,nz,zmin=0.2,zmax=0.4,logu_min=-4,logu_max=4,p_of_z=True)\n",
+    "wtheta = angular_corr_gal(theta,xi_power_law,nz,zmin=0.2,zmax=0.4,logu_min=-4,logu_max=4,p_of_z=True)\n",
     "\n",
     "plt.plot(theta,wtheta/anl_sol)\n",
     "plt.xscale('log')\n",
