tests: run all docs tests

--- a/devel/HMcode.ipynb
+++ b/devel/HMcode.ipynb
@@ -549,7 +549,8 @@
    },
    "outputs": [],
    "source": [
-    "intg = lambda z: (1 + z) / hm.cosmo.H(z).value ** 3"
+    "def intg(z):\n",
+    "    return (1 + z) / hm.cosmo.H(z).value ** 3"
    ]
   },
   {
@@ -578,7 +579,7 @@
    "outputs": [],
    "source": [
     "growths = []\n",
-    "for i, z in enumerate(zz):\n",
+    "for _i, z in enumerate(zz):\n",
     "    growths.append(quad(intg, z, np.inf)[0] * hm.cosmo.H(z).value / (g0 * hm.cosmo.H(0).value))"
    ]
   },
@@ -789,7 +790,6 @@
    ],
    "source": [
     "zc = spline(hm.m, hm.halo_concentration.zc(hm.m))(m)\n",
-    "print(\"Maximum collapse redshift: \", zc.max())\n",
     "plt.plot(m, zc / get(\"zc\") - 1)\n",
     "plt.xscale(\"log\")\n",
     "plt.ylim(-0.01, 0.01)"
@@ -1529,7 +1529,6 @@
    ],
    "source": [
     "zc = hm.halo_concentration.zc(m, z=4)\n",
-    "print(\"Maximum collapse redshift: \", zc.max())\n",
     "plt.plot(m, zc / get(\"zc\", iz=15) - 1)\n",
     "plt.xscale(\"log\")\n",
     "# plt.ylim(-0.05,0.05)"
