--- a/devel/angular_corr_dev.ipynb
+++ b/devel/angular_corr_dev.ipynb
@@ -218,8 +218,8 @@
     "    \n",
     "    R = np.sqrt(np.add.outer(np.outer(theta**2 ,x**2),u**2))\n",
     "    xi = xi(np.transpose(R,(0,2,1)),x) #theta, u , x\n",
-    "    print xi.shape\n",
-    "    print (p1(x)*p2(x)* x).shape\n",
+    "    print(xi.shape)\n",
+    "    print((p1(x)*p2(x)* x).shape)\n",
     "    xu_bit = np.outer(u,p1(x)*p2(x)* x)\n",
     "    \n",
     "    integrand =  xi*xu_bit\n",
@@ -230,7 +230,7 @@
     "def check_p(p,x,dlnx):\n",
     "    integ = simpson(p(x)*x,dx=dlnx)\n",
     "    if not np.isclose(integ,1.0,rtol=0.01):\n",
-    "        print \"WARNING: Filter function p(x) did not integrate to 1 (%s). Tentatively re-normalising.\"%integ\n",
+    "        print()\"WARNING: Filter function p(x) did not integrate to 1 (%s). Tentatively re-normalising.\"%integ)\n",
     "        return (lambda x: p(x)/integ)\n",
     "    else:\n",
     "        return p\n",
@@ -251,7 +251,7 @@
     "    integ = p1(x)*p2(x)*x**pl\n",
     "    \n",
     "    Aw = np.sqrt(np.pi)*r0**gamma * Gamma(gamma/2-0.5)/Gamma(gamma/2) * simpson(integ*x,dx=dlnx)\n",
-    "    print pl, Aw\n",
+    "    print(pl, Aw)\n",
     "    return Aw*theta**pl"
    ]
   },
@@ -349,7 +349,7 @@
     "    # below (1-f)**(1./(1-slope)) times the minimum.\n",
     "    slope = -np.log(xi(rmax)/xi(rmin))/np.log(rmax/rmin)\n",
     "    a = f**(1./(1-slope))\n",
-    "    print slope, a\n",
+    "    print(slope, a)\n",
     "    \n",
     "    # Problem witht he following is that Rmax may be greater than 2*x, which is impossible.\n",
     "    #Rmax = Rmin * a\n",
@@ -387,8 +387,7 @@
    ],
    "source": [
     "theta = np.logspace(-2,-1,5)\n",
-    "a = general_no_r_dep(theta,pl_xi(1.77,5.4),pform(500,500*0.15),xnum=10,Rnum=8)\n",
-    "print a"
+    "a = general_no_r_dep(theta,pl_xi(1.77,5.4),pform(500,500*0.15),xnum=10,Rnum=8)"
    ]
   },
   {
@@ -495,15 +494,6 @@
     "plt.xscale('log')\n",
     "plt.yscale('log')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
