--- a/devel/robust_hankel_transforms.ipynb
+++ b/devel/robust_hankel_transforms.ipynb
@@ -165,10 +165,7 @@
     "\n",
     "    lnk = np.log(k)\n",
     "\n",
-    "    if integration_max:\n",
-    "        x_max = integration_max * r.max()\n",
-    "    else:\n",
-    "        x_max = None\n",
+    "    x_max = integration_max * r.max() if integration_max else None\n",
     "\n",
     "    x, sumparts = get_sumspace(h, x_max)\n",
     "\n",
@@ -225,7 +222,7 @@
     "                        f\"Hankel transform of {func} did not converge for {v[1]}={rr:.2e}. \"\n",
     "                        f\"It is likely that higher {v[1]} will also not converge. \"\n",
     "                        f\"Absolute error estimate = {cumsum[-1] - cumsum[-2]:.2e}. \"\n",
-    "                        f\"Relative error estimate = {cumsum[-1]/cumsum[-2] - 1:.2e}\",\n",
+    "                        f\"Relative error estimate = {cumsum[-1] / cumsum[-2] - 1:.2e}\",\n",
     "                        stacklevel=2,\n",
     "                    )\n",
     "                    warn_conv = False\n",
@@ -1672,8 +1669,6 @@
     "\n",
     "    cumsum = np.cumsum(fnc)\n",
     "\n",
-    "    print(h, cumsum[-1])\n",
-    "\n",
     "    ax[i].scatter(R, summand_parts / summand_parts.max(), label=\"Extra Factors\")\n",
     "    ax[i].scatter(R, fnc / fnc.max(), label=\"Correlation\")\n",
     "    ax[i].scatter(R, (summand_parts * fnc) / (summand_parts * fnc).max(), label=\"Product\")\n",
@@ -1732,10 +1727,7 @@
     "    warn_lower = True\n",
     "    warn_conv = True\n",
     "    for ir, rr in enumerate(r):\n",
-    "        if integration_max:\n",
-    "            x_max = integration_max * rr\n",
-    "        else:\n",
-    "            x_max = None\n",
+    "        x_max = integration_max * rr if integration_max else None\n",
     "\n",
     "        x, sumparts = get_sumspace(h, x_max)\n",
     "\n",
@@ -1780,7 +1772,7 @@
     "                        f\"Hankel transform of {func} did not converge for {v[1]}={rr:.2e}. \"\n",
     "                        f\"It is likely that higher {v[1]} will also not converge. \"\n",
     "                        f\"Absolute error estimate = {cumsum[-1] - cumsum[-2]:.2e}. \"\n",
-    "                        f\"Relative error estimate = {cumsum[-1]/cumsum[-2] - 1:.2e}\",\n",
+    "                        f\"Relative error estimate = {cumsum[-1] / cumsum[-2] - 1:.2e}\",\n",
     "                        stacklevel=2,\n",
     "                    )\n",
     "                    warn_conv = False\n",
@@ -2624,7 +2616,8 @@
    "outputs": [],
    "source": [
     "def hankel_scipy(f, k, trns_var):\n",
-    "    intg = lambda x: f(x) * x\n",
+    "    def intg(x):\n",
+    "        return f(x) * x\n",
     "\n",
     "    out = np.zeros_like(k)\n",
     "    for i, kk in enumerate(k):\n",
